<resources>
    <string name="app_name">CitiesOfTheWorld</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="latitude">Latitude:</string>
    <string name="latitudeMap">Lat:</string>
    <string name="longitude">Longitude:</string>
    <string name="longitudeMap">Lng:</string>
    <string name="location_image">location_image</string>
    <string name="find_a_city">Find a city</string>
    <string name="defaultcityname">CityName</string>
    <string name="defaultcountryname">CountryName</string>
    <string name="descriptionwallpaper">Wallpaper</string>
    <string name="defaultId">1</string>
    <string name="title_activity_maps">Map</string>
</resources>
