<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/cardWallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/img2"
            android:contentDescription="@string/descriptionwallpaper" />

        <RelativeLayout
            android:id="@+id/rlBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/imgLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/location_image"
                app:srcCompat="@drawable/ic_location"
                android:layout_marginStart="16dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:layout_toRightOf="@+id/imgLocation"
                android:layout_toEndOf="@+id/imgLocation">

                <TextView
                    android:id="@+id/labelTxtLat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude" />

                <TextView
                    android:id="@+id/txtLat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/labelTxtLat"
                    android:layout_toEndOf="@+id/labelTxtLat" />

                <TextView
                    android:id="@+id/labelTxtLng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labelTxtLat"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/txtLng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/labelTxtLng"
                    android:layout_toRightOf="@+id/labelTxtLng"
                    android:layout_toEndOf="@+id/labelTxtLng" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txtId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                android:text="@string/defaultId"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rlBottom"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/defaultcityname"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCountryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultcountryname"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>