<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cardWallpaper"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/descriptionwallpaper"
                android:scaleType="centerCrop"
                android:src="@drawable/img1" />

            <LinearLayout
                android:id="@+id/llName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultcityname"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCountryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultcountryname"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <LinearLayout
                    android:id="@+id/rlBottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelTxtLat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitudeMap"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/txtLat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/labelTxtLng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitudeMap"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/txtLng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>